--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,8 +1,8 @@
 
 <% layout('layouts/boilerplate')%>
 <div id="map" style="width:100%; height: 500px"></div>
-
-<h1>All Campgrounds</h1>
+<hr>
+<h1>All Campgrounds:</h1>
 <div>
     <a href="/campgrounds/new">Add Campground</a>
 </div>
